2018-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp.el (rfn-eshadow-overlay): Declare it as dynamically scoped.
	(tramp-rfn-eshadow-update-overlay): Revert the corresponding part of
	last change.

2018-09-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-rfn-eshadow-setup-minibuffer): Do not use
	`symbol-value'.
	(tramp-rfn-eshadow-update-overlay): Do not use `symbol-value'.  Do
	not let-bind `rfn-eshadow-overlay', assign it directly (due to
	lexical binding).  (Bug#32550)

2018-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-truename):
	* tramp-adb.el (tramp-adb-handle-file-truename):
	* tramp-sh.el (tramp-sh-handle-file-truename): Fix problem
	with trailing slash.  (Bug#32218)

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 26.2.

2018-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in:
	* tramp-sh.el (tramp-remote-process-environment):
	Use proper spelling "Tramp".

2018-06-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.4 released.

	* tramp-smb.el (tramp-smb-handle-delete-directory): Check, that
	the directory has been removed indeed.

2018-06-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file-directly): Use "-R"
	rather than -"r" for recursive copy of directories.

2018-06-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file): In case of FILENAME
	being a directory, check whether `copy-directory' could be
	avoided.  Suggested by Stephen Nutt <stnutt@gmail.com>.  (Bug#31941)
	(tramp-do-copy-or-rename-file-directly): Call "cp" with "-r".

2018-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-mode, tramp-verbose)
	(tramp-backup-directory-alist, tramp-auto-save-directory)
	(tramp-encoding-shell, tramp-encoding-command-switch)
	(tramp-encoding-command-interactive, tramp-default-method)