@@ -1,3 +1,8 @@
+2018-10-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-rfn-eshadow-update-overlay): Use
+	`save-excursion'.  This completes the fix of Bug#32550.
+
 2018-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* tramp.el (rfn-eshadow-overlay): Declare it as dynamically scoped.
